# evil_hangman_

./: evil_hangman.py  hangman.py  pyproject.toml
py_evil_hangman/: test_word_maker.py  word_guesser.py  word_maker.py
py_evil_hangman/game/: args.py  game_manager.py
